# mirrulations

./: .gitignore  Dockerfile  Dockerfile.client  Dockerfile.dashboard  Dockerfile.work_server  Jenkinsfile  Makefile  README.md  Vagrantfile  attachments_generator  attachments_generator.py  default.conf  demo_generator.py  dev_setup.py  devup  docker-compose.yml  install_packages.sh  pylintrc  pytest.ini  setup.cfg  setup.py  update
.github/workflows/: mirrulations-CI-static-tests.yml  mirrulations-CI-unit-tests.yml
docker/: docker-compose.yml  dockerfile
docs/: EC2-Mongo.md  TODO_extraction_queue.md  api.md  attachment_job.md  attachments.md  client.md  dashboard.md  database.md  development.md  env_files.md  json_example.md  mongo_collections.md  production.md  pytest.md  regulations.md  structure.md  vagrant.md  work_generator.md  work_server.md
mirrulations-client/: Dockerfile  setup.cfg
mirrulations-client/src/mirrclient/: Job.py  client.py  disk_saver.py  exceptions.py  s3_saver.py  saver.py
mirrulations-client/tests/: test_client.py  test_disk_saver.py  test_s3_saver.py  test_saver.py
mirrulations-core/: .coveragerc  setup.cfg
mirrulations-core/tests/: test_amazon_s3.py  test_attachment_saver.py  test_attachments_generator.py  test_data_counts.py  test_data_storage.py  test_extraction_queue.py  test_is_redis_available.py  test_job_queue.py  test_job_statistics.py  test_path_generator.py  test_rabbitmq.py  test_redis_connector.py  test_redis_queue_utils.py  test_regulations_api.py
mirrulations-dashboard/: Dockerfile  setup.cfg
mirrulations-dashboard/tests/: test_dashboard.py  test_jobs_queued.py  test_jobs_queued_utils.py  test_sum_mongo_counts.py
mirrulations-extractor/: .gitignore  Dockerfile  pytest.ini  setup.cfg
mirrulations-extractor/src/mirrextractor/: extractor.py
mirrulations-extractor/tests/: test_extractor.py
mirrulations-mocks/: setup.cfg
mirrulations-mocks/tests/: test_mock_document_count.py
mirrulations-mongo/: Dockerfile
mirrulations-rabbitmq/: Dockerfile
mirrulations-validation/: Dockerfile  setup.cfg
mirrulations-validation/src/mirrval/: job_validator.py
mirrulations-work-generator/: Dockerfile  pytest.ini  search_iterator.py  setup.cfg  test_regulations_api.py  test_search_traverser.py
mirrulations-work-generator/tests/: test_data_storage.py  test_job_queue.py  test_regulations_api.py  test_results_processor.py  test_search_traverser.py  test_workgen.py
mirrulations-work-server/: Dockerfile  setup.cfg  test_work_server.py
mirrulations-work-server/src/mirrserver/: exceptions.py  get_client_id_validator.py  get_job_validator.py  put_results_validator.py  work_server.py  wsgi.py
mirrulations-work-server/tests/: test_get_client_id_validator.py  test_get_job_validator.py  test_put_results_validator.py  test_work_server.py
scripts/: Vagrantfile  app  client.service  client.sh  dashboard.service  dashboard.sh  self-signed.conf  ssl-params.conf  workgen.service  workgen.sh  workserver.service  workserver.sh
src/c21client/: Dockerfile  client.py
src/c21server/: server.py
tests/c21client/: test_client.py
tests/c21server/: test_basic_workgen.py  test_dashboard.py  test_data_storage.py  test_job_queue.py  (+7 more)
(+77 files in other folders)
