[metadata]
name = mirrulations-client

[options]
package_dir=
    =src
packages=find:
install_requires =
    flake8 >= 3.8.4
    pycodestyle >= 2.6.0
    pylint >= 2.7.2
    Flask >= 1.1.2
    pytest >= 6.2.2
    pytest-cov >= 2.11.1
    requests >= 2.25.1
    requests-mock >= 1.8.0
    responses >= 0.23.1
    pytest-mock >= 3.5.1
    python-dotenv >= 0.17.0
    boto3 >= 1.26.66
    botocore >= 1.29.113
    moto >= 4.1.6
    wheel >= 0.36.2
[options.packages.find]
where=src
