[metadata]
name = mirrulations-extractor

[options]
package_dir=
    =src
packages=find:
install_requires =
    flake8 >= 3.8.4
    pycodestyle >= 2.6.0
    pylint >= 2.7.2
    pytest >= 6.2.2
    pytest-cov >= 2.11.1
    pytest-mock >= 3.5.1
    python-dotenv >= 0.17.0
    wheel >= 0.36.2
    pikepdf == 7.1.1
    pdfminer.six == 20221105
[options.packages.find]
where=src
